api_versioned_docs/version-12.0.4/avalonia/automation/peers/controlautomationpeer.mdx
---
title: 'ControlAutomationPeer'
hide_title: true
slug: '/avalonia/automation/peers/controlautomationpeer'
uid: 'Avalonia.Automation.Peers.ControlAutomationPeer'
commentId: 'T:Avalonia.Automation.Peers.ControlAutomationPeer'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Automation.Peers'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">ControlAutomationPeer Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Automation.Peers</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

An automation peer which represents a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control) element.

</div>

<div className="apiref-page__signature">

```csharp
public class ControlAutomationPeer
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="automationpeer">AutomationPeer</a> <span className="apiref-page__relation-separator">-&gt;</span> ControlAutomationPeer
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Derived types:</span> <a href="autocompleteboxautomationpeer">AutoCompleteBoxAutomationPeer</a>, <a href="calendarautomationpeer">CalendarAutomationPeer</a>, <a href="calendardatepickerautomationpeer">CalendarDatePickerAutomationPeer</a>, <a href="carouselpageautomationpeer">CarouselPageAutomationPeer</a>, <a href="colorspectrumautomationpeer">ColorSpectrumAutomationPeer</a>, <a href="contentcontrolautomationpeer">ContentControlAutomationPeer</a>, <a href="contentpageautomationpeer">ContentPageAutomationPeer</a>, <a href="datepickerautomationpeer">DatePickerAutomationPeer</a>, <a href="drawerpageautomationpeer">DrawerPageAutomationPeer</a>, <a href="itemscontrolautomationpeer">ItemsControlAutomationPeer</a>, <a href="menuitemautomationpeer">MenuItemAutomationPeer</a>, <a href="nativemenubarautomationpeer">NativeMenuBarAutomationPeer</a>, <a href="navigationpageautomationpeer">NavigationPageAutomationPeer</a>, <a href="noneautomationpeer">NoneAutomationPeer</a>, <a href="numericupdownautomationpeer">NumericUpDownAutomationPeer</a>, <a href="pipspagerautomationpeer">PipsPagerAutomationPeer</a>, <a href="popupautomationpeer">PopupAutomationPeer</a>, <a href="rangebaseautomationpeer">RangeBaseAutomationPeer</a>, <a href="scrollviewerautomationpeer">ScrollViewerAutomationPeer</a>, <a href="tabbedpageautomationpeer">TabbedPageAutomationPeer</a>, <a href="textblockautomationpeer">TextBlockAutomationPeer</a>, <a href="textboxautomationpeer">TextBoxAutomationPeer</a>, <a href="timepickerautomationpeer">TimePickerAutomationPeer</a>, <a href="tooltipautomationpeer">ToolTipAutomationPeer</a>, <a href="windowbaseautomationpeer">WindowBaseAutomationPeer</a>, <a href="../../controls/automation/peers/expanderautomationpeer">ExpanderAutomationPeer</a>, <a href="../../controls/automation/peers/imageautomationpeer">ImageAutomationPeer</a>, <a href="../../controls/automation/peers/labelautomationpeer">LabelAutomationPeer</a>, <a href="../../controls/automation/peers/thumbautomationpeer">ThumbAutomationPeer</a>, <a href="../../controls/automation/peers/usercontrolautomationpeer">UserControlAutomationPeer</a>
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [ControlAutomationPeer](#uid-45b78be5e5) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-45b78be5e5"></span>

### ControlAutomationPeer Constructor

```csharp
public ControlAutomationPeer(Avalonia.Controls.Control owner)
```

#### Parameters

`owner` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


</section>

## Methods

| Name | Description |
| --- | --- |
| [CreatePeerForElement](#uid-01e76040e7) | Gets the [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) for a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control), creating it if necessary. |
| [FromElement](#uid-f0c358c33d) | Gets an existing [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) for a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control). |
| [GetOrCreate](#uid-d5fc666c05) | No summary available. |
| [BringIntoView](automationpeer.mdx#uid-0ce0c26ad7) | Attempts to bring the element associated with the automation peer into view. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetAcceleratorKey](automationpeer.mdx#uid-b27b870e23) | Gets the accelerator key combinations for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetAccessKey](automationpeer.mdx#uid-0c0606dfaf) | Gets the access key for the element that is associated with the automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetAutomationControlType](automationpeer.mdx#uid-f7daf3a583) | Gets the control type for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetAutomationId](automationpeer.mdx#uid-ec722c2168) | Gets the automation ID of the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetBoundingRectangle](automationpeer.mdx#uid-f04c4b54df) | Gets the bounding rectangle of the element that is associated with the automation peer in top-level coordinates. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetChildren](automationpeer.mdx#uid-1974fa1efa) | Gets the child automation peers. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetClassName](automationpeer.mdx#uid-ee7505094d) | Gets a string that describes the class of the element. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetHeadingLevel](automationpeer.mdx#uid-52680c5dea) | Gets the heading level that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetHelpText](automationpeer.mdx#uid-3613ae2a30) | Gets text that provides help for the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetItemStatus](automationpeer.mdx#uid-798f219773) | Gets the item status that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetItemType](automationpeer.mdx#uid-d858421abf) | Gets the item type that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetLabeledBy](automationpeer.mdx#uid-98bd49471d) | Gets the automation peer for the label that is targeted to the element. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetLandmarkType](automationpeer.mdx#uid-57bba04eba) | Gets the control type for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetLiveSetting](automationpeer.mdx#uid-75007f578a) | Gets the current live setting that is associated with this this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetLocalizedControlType](automationpeer.mdx#uid-262763e857) | Gets a human-readable localized string that represents the type of the control that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetName](automationpeer.mdx#uid-ac6dd5a547) | Gets text that describes the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetParent](automationpeer.mdx#uid-947969c77f) | Gets the [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) that is the parent of this [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer). Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetPlaceholderText](automationpeer.mdx#uid-1ced74e763) | Gets text that provides a placeholder for the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [GetProvider](automationpeer.mdx#uid-ee05fc8d1e) | Inherited from [AutomationPeer](automationpeer.mdx). |
| [HasKeyboardFocus](automationpeer.mdx#uid-5f0d3a3d10) | Gets a value that indicates whether the element that is associated with this automation peer currently has keyboard focus. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsContentElement](automationpeer.mdx#uid-5202d69eb1) | Gets a value that indicates whether the element that is associated with this automation peer contains data that is presented to the user. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsControlElement](automationpeer.mdx#uid-665cdd1957) | Gets a value that indicates whether the element is understood by the user as interactive or as contributing to the logical structure of the control in the GUI. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsEnabled](automationpeer.mdx#uid-cc55d0a61a) | Gets a value indicating whether the control is enabled for user interaction. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsKeyboardFocusable](automationpeer.mdx#uid-c9dfcdf842) | Gets a value that indicates whether the element can accept keyboard focus. Inherited from [AutomationPeer](automationpeer.mdx). |
| [IsOffscreen](automationpeer.mdx#uid-72084dcbfb) | Gets a value that indicates whether an element is off the screen. Inherited from [AutomationPeer](automationpeer.mdx). |
| [RaisePropertyChangedEvent](automationpeer.mdx#uid-ffcc0e3d63) | Raises an event to notify the automation client of a changed property value. Inherited from [AutomationPeer](automationpeer.mdx). |
| [SetFocus](automationpeer.mdx#uid-6a8d233e48) | Sets the keyboard focus on the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |
| [ShowContextMenu](automationpeer.mdx#uid-8bfe04d25b) | Shows the context menu for the element that is associated with this automation peer. Inherited from [AutomationPeer](automationpeer.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-01e76040e7"></span>

### CreatePeerForElement Method

Gets the [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) for a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control), creating it if
necessary.

```csharp
public Avalonia.Automation.Peers.AutomationPeer CreatePeerForElement(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control.


#### Returns

[Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer)

The automation peer.


#### Remarks

Despite the name (which comes from the analogous WPF API), this method does not create
a new peer if one already exists: instead it returns the existing peer.

</section>

<section className="apiref-page__member-entry">

<span id="uid-f0c358c33d"></span>

### FromElement Method

Gets an existing [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) for a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control).

```csharp
public Avalonia.Automation.Peers.AutomationPeer FromElement(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The control.


#### Returns

[Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer)

The automation peer if already created; otherwise null.


#### Remarks

To ensure that a peer is created, use [Avalonia.Automation.Peers.ControlAutomationPeer.CreatePeerForElement(Avalonia.Controls.Control)](xref:Avalonia.Automation.Peers.ControlAutomationPeer.CreatePeerForElement%28Avalonia.Controls.Control%29).

</section>

<section className="apiref-page__member-entry">

<span id="uid-d5fc666c05"></span>

### GetOrCreate Method

```csharp
public Avalonia.Automation.Peers.AutomationPeer GetOrCreate(Avalonia.Controls.Control element)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


#### Returns

[Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer)


</section>

## Properties

| Name | Description |
| --- | --- |
| [Owner](#uid-9c72446c3c) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-9c72446c3c"></span>

### Owner Property

```csharp
public Avalonia.Controls.Control Owner { get; set; }
```

</section>

## Events

| Name | Description |
| --- | --- |
| [ChildrenChanged](automationpeer.mdx#uid-d7771086b7) | Occurs when the children of the automation peer have changed. Inherited from [AutomationPeer](automationpeer.mdx). |
| [PropertyChanged](automationpeer.mdx#uid-7b87077a9e) | Occurs when a property value of the automation peer has changed. Inherited from [AutomationPeer](automationpeer.mdx). |

</ApiRefPage>

